--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=APISURAG8NOTAS
+
+#se comenta con numeral
+#Base de Datos en Memoria (H2)
+#http://localhost:8080/h2-console
+
+spring.datasource.url=jdbc:h2:mem:integrador_bd
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.dll-auto=update
